<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabel6.Tabel6DetailActivity">

    <TextView
        android:id="@+id/tabel6_field1Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabel6_field1_alias"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/tabel6_field1"
        android:layout_below="@id/tabel6_field1Judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tabel6_field2Judul"
        android:layout_below="@id/tabel6_field1"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tabel6_field2_alias"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/tabel6_field2"
        android:layout_below="@id/tabel6_field2Judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tabel6_field3Judul"
        android:layout_below="@id/tabel6_field2"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tabel6_field3_alias"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/tabel6_field3"
        android:layout_below="@id/tabel6_field3Judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tabel6_field4Judul"
        android:layout_below="@id/tabel6_field3"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tabel6_field4_alias"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/tabel6_field4"
        android:layout_below="@id/tabel6_field4Judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>


</RelativeLayout>
